Configuration, use puma, setup ActionMailer

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GITHUB_KEY=8fa276f0764f6f19b799
 GITHUB_SECRET=35e9ada07c9a0c73454994d069d9ca4c3960e288
+HOST=http://mbleigh-27198.usw1.nitrousbox.com/
